gitops/apps/podinfo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-stable
  namespace: production
spec:
  selector:
    app: podinfo
  ports:
    - port: 9898
      targetPort: 9898
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo-canary
  namespace: production
spec:
  selector:
    app: podinfo
  ports:
    - port: 9898
      targetPort: 9898
